[package]
name = "mentsequen"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
sha2 = "0.10"
anyhow = "1.0"
once_cell = "1.17"
hex = "0.4"

# NEW REQUIRED DEPENDENCIES
parking_lot = "0.12"
base64 = "0.21"
ed25519-dalek = "1.0.1"
rand = "0.8"
